Fix article on bottom clipping

--- a/src/styles/elements/landmarks.scss
+++ b/src/styles/elements/landmarks.scss
@@ -21,8 +21,9 @@ body {
 }
 
 main {
-  height: 100vh;
+  height: 85vh;
   overflow-y: auto;
+  // scroll-padding: 10%;
 }
 
 // Removes dropdown arrow 
